# Topological-Graph-for-Hamiltonian-Simulation

./: CITATION.cff  README.md  index.html
code/: Makefile  README.md  environment.yml  pyproject.toml  requirements-optional-gpu.txt
code/configs/: full.yaml  smoke.yaml
code/scripts/: audit_claims.py  make_figures.py  make_tables.py  run.py
code/src/topoham/: __init__.py  commutator_graph.py  config.py  env.py  error_form.py  foundations.py  hamiltonians.py  pauli.py  plotting.py  policies.py  reproduce.py  runner.py  theory.py
code/tests/: test_schedules.py  test_trotter.py
submission/: main.tex  main.tex.bak_idfix  main.tex.bak_preenrich  main.tex.bak_prephase2  main.tex.bak_prerefine  main_candidate.tex  refs.bib  table_main.tex
submission/code/: CITATION.cff  Makefile  README.md  THEORY.txt  pyproject.toml
submission/code/configs/: full.yaml  smoke.yaml
submission/code/scripts/: audit_claims.py  make_figures.py  make_tables.py  run.py
submission/code/src/topoham/: config.py  env.py  foundations.py  metrics.py  pauli.py  plotting.py  reproduce.py  runner.py  schedules.py  theory.py
submission/code/tests/: test_commutator_ordering.py  test_error_form.py  test_metrics.py  test_pauli.py
submission/tables/: macros.tex  main_results.md  tab_family.tex  tab_gates.tex  tab_impotence.tex  tab_matched.tex  tab_scaling.tex
