[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "specops-cgs"
version = "0.1.0"
description = "SpecOps-CGS: Zero-Overhead Cancellation of the Leading Trotter Error via Commutator-Graph Scheduling (part of the spectral-truncation operators program)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = [
  "Hamiltonian simulation", "Trotterization", "commutator graph",
  "product formula", "quantum simulation", "spectral truncation operators",
]
dependencies = [
  "numpy>=1.24", "scipy>=1.10", "networkx>=3.0",
  "scikit-learn>=1.2", "matplotlib>=3.6", "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
cgs-reproduce = "topoham.reproduce:main"
# Back-compat alias for the historical package name.
topoham-reproduce = "topoham.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
